# storage/api-docs/api-docs.json
@@ -103,6 +103,87 @@
                     }
                 }
             }
+        },
+        "/api/update/{id}": {
+            "put": {
+                "summary": "Update user profile",
+                "operationId": "26dc2672f43be87e72eab8456c51a793",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of user to update",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "User’s name",
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "description": "User’s email",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "description": "User’s password",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User profile updated successfully"
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            }
+        },
+        "/api/destroy/{id}": {
+            "delete": {
+                "summary": "Delete a user",
+                "operationId": "60ad215966e5eace5b7992f1bc422b4f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of user to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User deleted successfully"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            }
         }
     }
 }
